<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/home_nav"
    app:startDestination="@id/homeFragment">

    <fragment
        android:id="@+id/homeFragment"
        android:name="com.mintic22g1.recetapp.ui.fragments.HomeFragment"
        android:label="@string/home_fragment_label"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_homeFragment_to_recetapDetailFragment"
            app:destination="@id/recetapDetailFragment" />
    </fragment>
    <fragment
        android:id="@+id/profileFragment"
        android:name="com.mintic22g1.recetapp.ui.fragments.ProfileFragment"
        android:label="@string/profile_fragment_label"
        tools:layout="@layout/fragment_profile" />
    <fragment
        android:id="@+id/favoritesFragment"
        android:name="com.mintic22g1.recetapp.ui.fragments.FavoritesFragment"
        android:label="@string/favorites_fragment_label"
        tools:layout="@layout/fragment_favorites" />
    <fragment
        android:id="@+id/searchFragment"
        android:name="com.mintic22g1.recetapp.ui.fragments.SearchFragment"
        android:label="@string/search_fragment_label"
        tools:layout="@layout/fragment_search" />
    <fragment
        android:id="@+id/recetapDetailFragment"
        android:name="com.mintic22g1.recetapp.ui.fragments.RecetapDetailFragment"
        android:label="fragment_recetap_detail2"
        tools:layout="@layout/fragment_recetap_detail" />
    <fragment
        android:id="@+id/updateProfileFragment"
        android:name="com.mintic22g1.recetapp.ui.fragments.UpdateProfileFragment"
        android:label="fragment_update_profile"
        tools:layout="@layout/fragment_update_profile" />
</navigation>