<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".HomeFragment">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/home_search_layout"
        android:layout_width="match_parent"
        android:layout_margin="@dimen/default_margin"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:hint="Buscar"
        app:startIconDrawable="@drawable/ic_search_home"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/home_search"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto"
            android:inputType="textEmailAddress"
            />

    </com.google.android.material.textfield.TextInputLayout>

<!--    <androidx.recyclerview.widget.RecyclerView-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        android:id="@+id/recycler_button"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        app:layout_constraintBottom_toTopOf="@id/home_search_layout"-->
<!--        tools:listitem="@layout/item_button"-->
<!--        tools:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"-->
<!--        tools:orientation="horizontal"-->
<!--        tools:itemCount="4"/>-->

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/home_fragment_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/home_search_layout"
        app:layout_constraintBottom_toTopOf="@id/home_fragment_recycler_card"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/home_fragment_specail"
        android:textColor="@color/secondaryDark"
        android:layout_marginHorizontal="@dimen/default_margin"
        android:layout_marginTop="@dimen/small_margin"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/login_forgot_button"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/button_see_all"
        android:textColor="@color/primaryVariant"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/home_fragment_title"
        app:layout_constraintBottom_toTopOf="@id/home_fragment_recycler_card"
        />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/home_fragment_recycler_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/home_fragment_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:itemCount="3"
        tools:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        tools:listitem="@layout/item_card"
        tools:orientation="horizontal" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/home_fragment_recycler_subtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/small_margin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/home_fragment_recycler_card"
        android:layout_marginHorizontal="@dimen/default_margin"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/home_fragment_subtitle"
        android:textColor="@color/secondaryDark"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/home_fragment_recycler"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/home_fragment_recycler_subtitle"
        tools:itemCount="3"
        tools:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        tools:orientation="horizontal"
        tools:listitem="@layout/item_service" />

</androidx.constraintlayout.widget.ConstraintLayout>